--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -125,7 +125,23 @@
     font-size: 11px;
     padding-top: 2px;
 }
-
+.smothParagraphTitle table {
+    table-layout: fixed;
+    width: 100%;
+    height:9px;
+    margin:0px;
+    padding:0px;
+}
+.smothParagraphTitle td {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 9px;
+    overflow: hidden;
+    white-space: nowrap;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin:0px;
+    text-align: center;
+}
 .smothTextFieldTD {
     height: 20px;
 }
