--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -5,11 +5,14 @@
 
 .mgnlBtnsLeft {
     text-align: left;
-    line-height: 14px;
 }
 
 .mgnlBtnsRight {
     text-align: right;
+}
+
+.mgnlBtnsLeft, .mgnlBtnsRight {
+    white-space: nowrap;
     line-height: 14px;
 }
 
@@ -53,6 +56,11 @@
     border-left: 1px solid #ADC97B;
     border-bottom: 1px solid #396101;
     border-right: 1px solid #396101;
+}
+
+table.mgnlControlBar, table.mgnlControlBarSmall {
+    /* this is the default, but enforcing it seems to make safari happier when we embed another table in table-layout:fixed */
+    table-layout: auto;
 }
 
 .mgnlControlBarSmall,.mgnlControlBarSmall_PUSHED,.mgnlControlBarSmall_MOUSEOVER
@@ -125,14 +133,22 @@
     font-size: 11px;
     padding-top: 2px;
 }
-.smothParagraphTitle table {
+
+td.smothBarLabelContainer {
+    width: 100%;
+}
+
+table.smothBarLabel {
     table-layout: fixed;
     width: 100%;
-    height:9px;
-    margin:0px;
-    padding:0px;
+    height: 9px;
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    border-collapse: collapse;
 }
-.smothParagraphTitle td {
+
+td.smothBarLabel {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 9px;
     overflow: hidden;
@@ -142,6 +158,7 @@
     margin:0px;
     text-align: center;
 }
+
 .smothTextFieldTD {
     height: 20px;
 }
