--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -37,7 +37,7 @@
 }
 
 .mgnlControlButton_PUSHED,.mgnlControlButtonSmall_PUSHED {
-    background-color: #9DB517;
+    background-color: #9DB517 !important;
     border-top: 1px solid #B9C950;
     border-left: 1px solid #B9C950;
     border-bottom: 1px solid #8a2;
@@ -51,7 +51,7 @@
 
 .mgnlControlButton,.mgnlControlButtonSmall,.mgnlControlButtonTransparent,.mgnlControlButtonTransparentSmall
     {
-    background-color: #5E9201;
+    background-color: #5E9201 !important;
     border-top: 1px solid #ADC97B;
     border-left: 1px solid #ADC97B;
     border-bottom: 1px solid #396101;
@@ -69,17 +69,19 @@ table.mgnlControlBar, table.mgnlControlBarSmall {
 }
 
 .mgnlControlBar,.mgnlControlBarSmall {
-    background-image: url("../admin-images/mgnl-bar.png");
-    background-color: transparent;
-    background-repeat: repeat;
+    background: url("../admin-images/mgnl-bar.png") transparent repeat !important;
     border-top: 1px solid #ADC97B;
     border-left: 1px solid #ADC97B;
     border-bottom: 1px solid #396101;
     border-right: 1px solid #396101;
 }
 
+.mgnlControlBar *, .mgnlControlBarSmall * {
+    background: url("../admin-images/mgnl-bar.png") transparent repeat !important;
+}
+
 .mgnlControlBar_PUSHED,.mgnlControlBarSmall_PUSHED {
-    background-color: #9DB517;
+    background-color: #9DB517 !important;
     border-top: 1px solid #B9C950;
     border-left: 1px solid #B9C950;
     border-bottom: 1px solid #8a2;
@@ -87,7 +89,7 @@ table.mgnlControlBar, table.mgnlControlBarSmall {
 }
 
 .mgnlControlBar_MOUSEOVER,.mgnlControlBarSmall_MOUSEOVER {
-    background-color: #8a3;
+    background-color: #8a3 !important;
     border-left: 1px solid #ac6;
     border-top: 1px solid #ac6;
     border-right: 1px solid #680;
