MAGNOLIA-2414 : regaining control on our greenbars ! getting there - buttons don't need the !important tags, only table elements
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@19257 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -28,20 +28,11 @@
     padding: 0 3px 0 3px !important;
 }
 
-.mgnlControlButton,.mgnlControlButton_PUSHED,.mgnlControlButtonSmall,.mgnlControlButtonSmall_PUSHED
-    {
+.mgnlControlButton,.mgnlControlButton_PUSHED,.mgnlControlButtonSmall,.mgnlControlButtonSmall_PUSHED {
     font-family: Verdana, sans-serif;
     color: #F0F2E6;
     cursor: default;
     white-space: nowrap;
-}
-
-.mgnlControlButton_PUSHED,.mgnlControlButtonSmall_PUSHED {
-    background-color: #9DB517 !important;
-    border-top: 1px solid #B9C950 !important;
-    border-left: 1px solid #B9C950 !important;
-    border-bottom: 1px solid #8a2 !important;
-    border-right: 1px solid #8a2 !important;
 }
 
 .mgnlControlButtonTransparent,.mgnlControlButtonTransparentSmall {
@@ -49,13 +40,20 @@
     white-space: nowrap;
 }
 
-.mgnlControlButton,.mgnlControlButtonSmall,.mgnlControlButtonTransparent,.mgnlControlButtonTransparentSmall
-    {
-    background-color: #5E9201 !important;
-    border-top: 1px solid #ADC97B !important;
-    border-left: 1px solid #ADC97B !important;
-    border-bottom: 1px solid #396101 !important;
-    border-right: 1px solid #396101 !important;
+.mgnlControlButton,.mgnlControlButtonSmall,.mgnlControlButtonTransparent,.mgnlControlButtonTransparentSmall {
+    background-color: #5E9201;
+    border-top: 1px solid #ADC97B;
+    border-left: 1px solid #ADC97B;
+    border-bottom: 1px solid #396101;
+    border-right: 1px solid #396101;
+}
+
+.mgnlControlButton_PUSHED,.mgnlControlButtonSmall_PUSHED {
+    background-color: #9DB517 !important;
+    border-top: 1px solid #B9C950;
+    border-left: 1px solid #B9C950;
+    border-bottom: 1px solid #8a2;
+    border-right: 1px solid #8a2;
 }
 
 table.mgnlControlBar, table.mgnlControlBarSmall {
@@ -64,8 +62,7 @@ table.mgnlControlBar, table.mgnlControlBarSmall {
     border-collapse: collapse !important;
 }
 
-.mgnlControlBarSmall,.mgnlControlBarSmall_PUSHED,.mgnlControlBarSmall_MOUSEOVER
-    {
+.mgnlControlBarSmall,.mgnlControlBarSmall_PUSHED,.mgnlControlBarSmall_MOUSEOVER {
     width: 100%;
 }
 
