--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -17,13 +17,13 @@
 }
 
 .mgnlControlButton,.mgnlControlButton_PUSHED {
-    font-size: 11px;
+    font-size: 11px !important;
     height: 15px;
     padding: 1px 8px 1px 10px !important;
 }
 
 .mgnlControlButtonSmall,.mgnlControlButtonSmall_PUSHED {
-    font-size: 9px;
+    font-size: 9px !important;
     height: 5px;
     padding: 0 3px 0 3px !important;
 }
@@ -33,6 +33,8 @@
     color: #F0F2E6;
     cursor: default;
     white-space: nowrap;
+    display: inline !important;
+    width: auto !important;
 }
 
 .mgnlControlButtonTransparent,.mgnlControlButtonTransparentSmall {
