MAGNOLIA-2414 : regaining control on our greenbars !
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@19553 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -29,8 +29,8 @@
 }
 
 .mgnlControlButton,.mgnlControlButton_PUSHED,.mgnlControlButtonSmall,.mgnlControlButtonSmall_PUSHED {
-    font-family: Verdana, sans-serif;
-    color: #F0F2E6;
+    font-family: Verdana, sans-serif !important;
+    color: #F0F2E6 !important;
     cursor: default;
     white-space: nowrap;
     display: inline !important;
