MAGNOLIA-2443 added the standard look
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21762 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/table.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/table.css
@@ -11,8 +11,9 @@
 }
 
 #mgnl table.data th {
-    background-color: #9DB517;
-    color: #fff;
+    background-color: #D8EFB6;
+    color: #000;
+    font-size: 11px;
     font-weight: bold;
 }
 
