MAGNOLIA-2414 : regaining control on our greenbars !
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@22900 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -60,13 +60,14 @@
 
 table.mgnlControlBar, table.mgnlControlBarSmall {
     /* this is the default, but enforcing it seems to make safari happier when we embed another table in table-layout:fixed */
-    clear: both;
+    margin: 0px !important;
+    padding: 0px !important;
     table-layout: auto;
     border-collapse: collapse !important;
 }
 
 .mgnlControlBarSmall,.mgnlControlBarSmall_PUSHED,.mgnlControlBarSmall_MOUSEOVER {
-    width: 100%;
+    width: 100% !important;
 }
 
 .mgnlControlBar,.mgnlControlBarSmall {
