MAGNOLIA-2414 : regaining control on our greenbars !
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@22905 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -58,7 +58,7 @@
     border-right: 1px solid #8a2;
 }
 
-table.mgnlControlBar, table.mgnlControlBarSmall {
+table.mgnlControlBar, table.mgnlControlBarSmall, table.mgnlControlBarSmall_PUSHED, table.mgnlControlBarSmall_MOUSEOVER {
     /* this is the default, but enforcing it seems to make safari happier when we embed another table in table-layout:fixed */
     margin: 0px !important;
     padding: 0px !important;
