flexible height, aligned links, and restored spacing after removing superfluous <br> tags with r29052
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@29054 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
@@ -84,11 +84,15 @@ div.options {
 
 div.option {
     background-color:#F6F6F6;
-    height:160px;
     margin-bottom:20px;
     padding:10px;
     width:390px;
 }
+
+div.option p {
+    height: 15ex;
+}
+
 div#stk {
     float:left;
     margin-right:30px;
