--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
@@ -90,7 +90,7 @@ div.option {
 }
 
 div.option p {
-    height: 15ex;
+    height: 12ex;
 }
 
 div#stk {
@@ -108,7 +108,7 @@ div.option h3 {
 }
 
 ul.links {
-    margin: 10px 0pt 10px 20px;
+    margin: 0 0 3em 20px;
 }
 
 .instanceLogo {
