--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background: #FAFBF4;
-    color: #FFF;
+    color: #000;
     font-family: Georgia, "Times New Roman", Times, serif;
     padding: 0;
     font-size: 9pt;
