MAGNOLIA-3149: removed border around page and bold notices. Made white background.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33027 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
@@ -1,5 +1,5 @@
 html {
-    background: #FAFBF4;
+    background: #FFF;
 }
 
 body {
@@ -33,9 +33,8 @@ li {
 }
 
 .page {
-    margin-top: 1px;
-    border: 1px solid #adbc61;
     background: white;
+    padding: 0;
 }
 
 #header {
