a bigger centered loading indicator (the default one is tiny and on window top right, practically invisible).
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@37038 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admincentral-vaadin/src/main/resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-admincentral-vaadin/src/main/resources/VAADIN/themes/magnolia/styles.css
@@ -1,5 +1,15 @@
 @import "../runo/styles.css";
 
-.v-table-row, .v-table-row-odd {
-   height: 25px; /* a fix for TreeTable row jittering */
+.v-table-row,.v-table-row-odd {
+  height: 25px; /* a fix for TreeTable row jittering */
+}
+
+.v-loading-indicator,.v-loading-indicator-delay,.v-loading-indicator-wait
+  {
+  background: transparent url(img/loading-indicator.gif) no-repeat center;
+  position: fixed !important;
+  width: 66px;
+  height: 66px;
+  top: 50%;
+  left: 50%;
 }
