--- a/magnolia-module-admincentral-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-admincentral-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -13,3 +13,20 @@
   top: 50%;
   left: 50%;
 }
+
+.drop-field-label {
+	text-align: center;
+	padding-top: 90px;
+	height: 200px;
+}
+
+.dialog-editor-trash {
+    background: url(../runo/icons/64/trash.png) no-repeat center;
+    height: 64px;
+/*    width: 64px;*/
+}
+
+.edit-dialog {
+    min-height: 300px;
+}
+
