--- a/magnolia-module-admincentral-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-admincentral-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -35,12 +35,6 @@
  */
 .editBar{
 	height: 20px;
-}
-.editBar .v-panel-deco, .editBar .v-panel-captionwrap{
-	display: none;
-}
-
-.editBar .v-panel-content{
     border-top: 1px solid #ADC97B ;
     border-left: 1px solid #ADC97B;
     border-bottom: 1px solid #396101 ;
@@ -50,9 +44,21 @@
     background-image: url("../../../admin-images/mgnl-bar.png");
 }
 
+.editBar .v-panel-deco, .editBar .v-panel-captionwrap{
+	display: none;
+}
+
+.editBar .v-panel-content{
+    background-image: url("../../../admin-images/mgnl-bar.png");
+}
+
 .editBar .v-button-wrap{
 	background: transparent;
 	color: white;
 	border-color: #A8D556;
 	text-shadow: none;
+}
+
+.paragraphMarker{
+	display: none;
 }
