fix to fight against the STK theme
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@37290 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admincentral-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-admincentral-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -1,7 +1,7 @@
 @import "../runo/styles.css";
 
 .v-table-row,.v-table-row-odd {
-  height: 25px; /* a fix for TreeTable row jittering */
+  height: 30px; /* a fix for TreeTable row jittering */
 }
 
 .v-loading-indicator,.v-loading-indicator-delay,.v-loading-indicator-wait
@@ -73,3 +73,11 @@
 .v-shadow-window-fixed {
   position: fixed !important;
 }
+
+/**
+ * Demo only, to overwrite a STK table definition
+ */
+.v-formlayout table{
+	font-size: 13px;
+}
+ 
