--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/deletedPage.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/deletedPage.css
@@ -2,12 +2,22 @@
  * CSS definitions for template of a page,
  * which has been marked as deleted.
  */
- 
+
 body {
 	padding: 0;
 	margin: 0;
 	background-color: #FAFBF4;
 }
+
+/* Remove dotted line around links: we have mouse over behaviour */
+a {
+	outline: none;
+}
+
+a:focus {
+	-moz-outline-style: none;
+}
+/* End Remove dotted line around links */
 
 /* --- Message box underneath edit bar --- */
 div.mgnlMessageBox {
@@ -16,9 +26,9 @@ div.mgnlMessageBox {
 	margin: 25px;
 	padding: 20px;
 	border: 1px black solid;
-	
+
 	font-family: Verdana, sans-serif;
-	
+
 	background-color: #E4F5C9;
 }
 
@@ -50,7 +60,7 @@ div.mgnlTreeMenuEmbedded {
     margin-left: 15px;
     padding: 0;
     border: #999 1px solid;
-    
+
     background-color: #FAFBF4;
 }
 
@@ -59,19 +69,19 @@ a.mgnlTreeMenuItemEmbedded {
 
     clear: both;
     float: left;
-    
+
     font-family: Verdana, sans-serif;
     font-size: 11px;
     text-decoration: none;
-    
+
     color: #000;
-    
+
     cursor: pointer;
 }
 
 a.mgnlTreeMenuItemEmbedded img.mgnlTreeMenuItemIcon {
 	float: left;
-	
+
 	margin: 0;
 	padding-left: 4px;
 	padding-right: 1px;
@@ -88,7 +98,7 @@ a.mgnlTreeMenuItemEmbedded div.mgnlTreeMenuItemCommand {
 	padding-right: 4px;
     padding-top: 4px;
     padding-bottom: 4px;
-    
+
     line-height: 16px;
 }
 
@@ -105,6 +115,10 @@ a#mgnlPageDeletedOptions_undelete:hover {
 	background-color: #F0F2E6;
 }
 
+a#mgnlPageDeletedOptions_undeleteAll:hover {
+	background-color: #F0F2E6;
+}
+
 a#mgnlPageDeletedOptions_gotoCentral:hover {
 	background-color: #F0F2E6;
 }
@@ -118,6 +132,6 @@ a.mgnlTreeMenuItemEmbedded:hover div.mgnlTreeMenuItemCommand {
 }
 
 /* Separator line between undelete and goto */
-a#mgnlPageDeletedOptions_undelete {
+a#mgnlPageDeletedOptions_undeleteAll {
 	border-bottom: #999 2px solid;
 }
