MAGNOLIA-2251: use border-top for last element (goto adminCentral) so that it is always separated from the elements above it.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39008 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/deletedPage.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/deletedPage.css
@@ -104,6 +104,8 @@ a.mgnlTreeMenuItemEmbedded div.mgnlTreeMenuItemCommand {
 
 div#mgnlPageDeletedOptions_gotoCentralCommand {
 	padding-left: 25px;
+	/* Separator line between undelete and goto */
+	border-top: #999 2px solid;
 }
 
 /* Hover over menu item */
@@ -129,9 +131,4 @@ a.mgnlTreeMenuItemEmbedded:hover img.mgnlTreeMenuItemIcon {
 
 a.mgnlTreeMenuItemEmbedded:hover div.mgnlTreeMenuItemCommand {
 	background-color: #F0F2E6;
-}
-
-/* Separator line between undelete and goto */
-a#mgnlPageDeletedOptions_undeleteAll {
-	border-bottom: #999 2px solid;
 }
