* MAGNOLIA-2939 removed "temp" page on update/install screens - now always redirect to /.magnolia/installer * added favicon.ico to mappings of the resources servlet during install * MAGNOLIA-3383 update/install screens are now smarter and can use proper wording depending on the delta types (updates, installs or both)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39084 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.css
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.css
@@ -88,8 +88,9 @@ h3 {
     font-size: 22px;
     text-decoration: none;
     float: right;
-    margin: 30px 40px 0 0;
-    padding: 14px 75px 32px 20px;
+    margin: 30px 0 0 0;
+    padding: 14px 0 32px 20px;
+    width: 306px;
     background-repeat: no-repeat;
 }
 
